k8s/nlb_nginx/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.noteapp.xyz
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: quickstart-kb-http
            port:
              number: 5601
  tls:
  - hosts:
    - kibana.noteapp.xyz
    secretName: quickstart-kb-http-certs-public
